change to minnion yellow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 :root{
-    --primary-color: #ffeb6c;
+    --primary-color: #FCE029;
     --accent-color:  #0A75BC;
     --secondary-accent-color: #A87A51;
     --width-break:600px
